Removed wrapper around logger and used direct invocations of logger instead (for proper logger names in messages)
cherry picked from dcd41dd BraindeadOne